plugins {
	id 'fabric-loom' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	// Add repositories to retrieve artifacts from in here.
	// You should only use this when depending on other mods because
	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
	// for more information about repositories.

    mavenCentral()
}

fabricApi {
	configureDataGeneration {
		client = true
	}
}

dependencies {
	// To change the versions see the gradle.properties file
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

	// Fabric API. This is technically optional, but you probably want it anyway.
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

    // LWJGL core libraries
    implementation "org.lwjgl:lwjgl:3.3.3"
    implementation "org.lwjgl:lwjgl-vulkan:3.3.3"
    implementation "org.lwjgl:lwjgl-vma:3.3.3"

    // LWJGL Shaderc (needed by VulkanMod)
    implementation "org.lwjgl:lwjgl-shaderc:3.3.3"

    // LWJGL natives
    runtimeOnly "org.lwjgl:lwjgl:3.3.3:natives-windows"
    runtimeOnly "org.lwjgl:lwjgl-shaderc:3.3.3:natives-windows"
    //runtimeOnly "org.lwjgl:lwjgl-vulkan:3.3.3:classifier=natives-windows"
    //runtimeOnly "org.lwjgl:lwjgl-vma:3.3.3:classifier=natives-windows"

    /*
    implementation  'org.lwjgl:lwjgl-vulkan:3.3.3'
    implementation "org.lwjgl:lwjgl-vma:3.3.3"
    runtimeOnly "org.lwjgl:lwjgl-vma:3.3.3:natives-windows"
    runtimeOnly "org.lwjgl:lwjgl-vulkan:3.3.3:natives-windows"*/
    implementation "org.joml:joml:1.10.7" // or latest version
    modImplementation files('libs/VulkanMod_1.21.4-0.5.6.jar')

    //runtimeOnly 'org.lwjgl:lwjgl-vulkan:3.3.3:natives-windows' // replace with your OS
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": inputs.properties.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 21
    options.compilerArgs += ["--enable-preview"]
}
tasks.withType(Test).configureEach {
    jvmArgs += ["--enable-preview"]
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += ["--enable-preview"]
}

tasks.register('runPanama', JavaExec) {
    classpath = sourceSets.test.runtimeClasspath
    mainClass = 'test.TestPanama'
    jvmArgs '--enable-preview'
}

tasks.withType(Jar).configureEach {
    manifest {
        attributes(
                'Add-Opens': '--enable-preview'

        )
    }
}
import net.fabricmc.loom.task.RunGameTask

tasks.withType(RunGameTask).configureEach {
    jvmArgs '--enable-preview', '--enable-native-access=ALL-UNNAMED'
}


loom {
    runs.configureEach {
        vmArgs.add('--enable-preview')
    }
}

java {
	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
	// if it is present.
	// If you remove this line, sources will not be generated.
	withSourcesJar()

	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
}

jar {
	inputs.property "archivesName", project.base.archivesName

	from("LICENSE") {
		rename { "${it}_${inputs.properties.archivesName}"}
	}
}

// configure the maven publication
publishing {
	publications {
		create("mavenJava", MavenPublication) {
			artifactId = project.archives_base_name
			from components.java
		}
	}

	// See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
	repositories {
		// Add repositories to publish to here.
		// Notice: This block does NOT have the same function as the block in the top level.
		// The repositories here will be used for publishing your artifact, not for
		// retrieving dependencies.
	}
}